--- a/webaccess/res/keypad.html
+++ b/webaccess/res/keypad.html
@@ -67,7 +67,9 @@ var chanl=[];
 var vall=[];
 var chanlvall=[];
 var channels, values, c, v, first, last, step, range;
-
+var reqchan;
+var addval;
+var valors=[];
 window.onload = function() 
 {
   var url = 'ws://' + window.location.host + '/qlcplusWS';
@@ -81,6 +83,21 @@ window.onload = function()
   websocket.onerror = function(ev) {
     alert("QLC+ connection error!");
   };
+  websocket.onmessage = function(ev) {
+    //alert(ev.data);
+    var msg=ev.data;
+    var msgParams = ev.data.split('|');
+    if (msgParams[0] == "QLC+API") {
+      if (msgParams[1] == "getChannelsValues") {
+        valors=[];
+        for (i = 2; i < msgParams.length; i+=3){
+            console.log(msgParams[i+1]);
+            valors.push(msgParams[i+1]);
+        }
+        console.log(valors);
+        }
+    }
+   };
 };
 
 function composeCommand(cmd) 
@@ -93,6 +110,31 @@ function composeCommand(cmd)
   alert("You must connect to QLC+ WebSocket first !");
 }
 
+
+function reqChannelsRange(univ, chan, range)
+{
+    if (isConnected == true)
+      websocket.send("QLC+API|" + "getChannelsValues" + "|" + univ + "|" + chan + "|" + range);
+    else
+      alert("You must connect to QLC+ WebSocket first !");
+}
+
+
+function resetU()
+{
+    if (isConnected == true)
+      websocket.send("QLC+API|sdResetUniverse");
+    else
+      alert("You must connect to QLC+ WebSocket first !");
+}
+
+function resetCh(chNum)
+{   document.getElementById('commInput').value = '';
+    if (isConnected == true)
+      websocket.send("QLC+API|sdResetChannel|" + chNum);
+    else
+      alert("You must connect to QLC+ WebSocket first !");
+}
 // Modified set Channel Function
 function setChannel(c, v)
 { 
@@ -111,7 +153,6 @@ function zip()
   var longest = args.reduce(function(a,b){
       return a.length>b.length ? a : b
   }, []);
-
   return longest.map(function(_,i){
       return args.map(function(array){return array[i]})
   });
@@ -123,6 +164,16 @@ function chval(c)
 //  'T' = THRU, 'B' = BY
 // Returns three values first, last and step values
 // first, last and step should be channels number or values. 
+//addval=0;
+  if (c.split(pl).length>1)
+    {
+        addval=c.split(pl)[1];
+    }
+  if (c.split(mi).length>1)
+    {
+        addval=c.split(mi)[1];
+        
+    }
 
   if (c.split(by).length>1)
   {
@@ -160,10 +211,10 @@ function chans_vals(c)
 // Calls to chval fucntion to evaluate channels numbers and values.
 // Arrange it on an array used later to assign channels values
 // calling setChannel function in a loop
-
-  chanlvall = []
-  chanl = []
-  vall = []
+    console.log(c);
+  chanlvall = [];
+  chanl = [];
+  vall = [];
   if (c.split(at).length>1)
   {
     a=c.split(at);
@@ -171,7 +222,7 @@ function chans_vals(c)
     chans=chval(a[0]);
     // Call to chval function to assing first, last and step value of channels
     vals=chval(a[1]);
-    console.log(chans, vals);
+    //console.log('canals valors', chans, vals);
     // Set a list of channels for a single channel, a range of channels with a given step
     for (var i = chans[0]; i <= chans[1]; i += chans[2])
       chanl.push(i);
@@ -187,18 +238,36 @@ function chans_vals(c)
       for (var i = vals[0]; i <= vals[1]; i += Math.round(vals[1]/llarg ))
         vall.push(i);
     }
+    for (var i = chans[0]; i <= chans[1]; i += chans[2]){
+        console.log(chans[i])}
     // Set an array of channels number with a dmx value for that channel.
     chanlvall = zip(chanl, vall);
     document.getElementById('commInput').value = '';
     // Iterate on array chanvall and set dmx values for every channel number
+    //oldvals=zip(valors);
     for (i = 0, len = chanlvall.length; i  < len; i++)
     {
-      // console.log(chanlvall[i][0],chanlvall[i][1]);
       c = chanlvall[i][0];
       v = chanlvall[i][1];
+      console.log(c, v);
+      console.log(parseInt(valors[c-1]) + parseInt(v * 2.55));
+        if (a.toString().split(pl).length>1){
+            if ((parseInt(valors[c-1]) + parseInt(v * 2.55)) >= 255){
+            v=255}
+            else {
+            v = parseInt(valors[c-1]) + parseInt(v * 2.55);}
+        }
+        if (a.toString().split(mi).length>1){
+            if ((parseInt(valors[c-1]) + parseInt(v * 2.55)) <= 0){
+            v=0}
+            else {
+            v = parseInt(valors[c-1]) + parseInt(v * 2.55);}
+            }
       setChannel(c,v);
     }
-  }
+    valors=[];
+    reqChannelsRange(1, 1, 512);
+}
 }
 </script>
 
@@ -208,11 +277,9 @@ function chans_vals(c)
 <div class="controlBar">
 <a class="button button-blue" href="/simpleDesk"><span>Back</span></a>
 <div class="swInfo">Q Light Controller Plus</div></div>
-
 <div style="margin: 20px 12px 0 20px; font: bold 27px/1.2em 'Trebuchet MS',Arial, Helvetica; color: #fff;">
 Command: <input style="height: 22px; vertical-align: middle;" id="commInput" value='' type="input">
 </div>
-   
 <table style="margin: 20px;">
 <tr>
  <td><div class="button button-keypad" onclick="composeCommand('7');">7</div></td>
@@ -233,9 +300,9 @@ Command: <input style="height: 22px; vertical-align: middle;" id="commInput" val
   <td><div class="button button-keypad" onclick="composeCommand('A255');">FULL</div></td>
 </tr>
 <tr>
-  <td><div class="button button-keypad" onclick="composeCommand('-');">-</div></td>
+  <td><div class="button button-keypad" onclick="composeCommand('A-');">-%</div></td>
   <td><div class="button button-keypad" onclick="composeCommand('0');">0</div></td>
-  <td><div class="button button-keypad" onclick="composeCommand('+');">+</div></td>
+  <td><div class="button button-keypad" onclick="composeCommand('A+');">+%</div></td>
   <td><div class="button button-keypad" onclick="composeCommand('A00');">ZERO</div></td>
 </tr>
 <tr>
@@ -244,6 +311,9 @@ Command: <input style="height: 22px; vertical-align: middle;" id="commInput" val
   </td>
   <td><div class="button button-keypad" onclick="composeCommand('B');">BY</div></td>
 </tr>
+<tr>
+    <td><div class="button button-keypad" onclick="resetU();">Reset All</div></td>
+    <td><div class="button button-keypad" onclick="resetCh(getElementById('commInput').value);">Reset Ch</div></td></tr>
 </table>
 
 </body>
