resources: fix RGB dev tool typo

--- a/resources/rgbscripts/devtool.html
+++ b/resources/rgbscripts/devtool.html
@@ -1,7 +1,7 @@
 <HTML>
 <HEAD>
 <TITLE>Q Light Controller Plus - RGBScript Development Tool</TITLE>
-<!-- Include your script on the following line, replace "oppositerows.js" -->
+<!-- Include your script on the following line, replace "opposite.js" -->
 <SCRIPT SRC="opposite.js"></SCRIPT>
 <SCRIPT SRC="devtool.js"></SCRIPT>
 
