--- a/resources/rgbscripts/devtool.html
+++ b/resources/rgbscripts/devtool.html
@@ -11,7 +11,6 @@
   color: #f9f8f0;
  }
 </style>
-<!-- Include your script on the following line, replace "opposite.js" -->
 <script type="text/javascript" src="devtool.js"></script>
 </head>
 <body onLoad="loadAlgoFile()" style="font-family:Arial;">
@@ -21,28 +20,28 @@
 <div>
 <h2>Instructions</h2>
 <p>
-To use this tool, you must first edit this file and include your script file to it and
-make sure your favourite web browser supports JavaScript. Then, to make your algorithm
-object accessible to this tool, you must create a global variable within your algorithm
-file called <b>testAlgo</b>, which then actually contains your algorithm object i.e. the
-object that provides rgbMap() and rgbMapStepCount() functions. Now you're ready to load
+To use this tool, you must first set the filename of the script you intend to test/debug 
+(including the .js extension) in the 'filename' field. Then hit 'Reload' to load it. 
+To make your algorithm object accessible to this tool, you must create a global variable 
+within your algorithm file called <b>testAlgo</b>, which then actually contains your algorithm 
+object i.e. the object that provides rgbMap() and rgbMapStepCount() functions. Now you're ready to load
 this file with your browser and see your first results.
 </p>
 
 <p>
 If you see what you expect to see in the <b>Algorithm Properties</b> section below,
 you'll know your script has been evaluated successfully. Next, put some values to the
-<b>Width</b> and <b>Height</b> boxes in the <b>Grid Size</b> section, click <b>Update</b>
-and see if your script calculates the <b>rgbMapStepCount(width, height)</b> result
-correctly. If everything is A-OK, you should already see the first frame of your RGB map
-at the bottom of the page. Clicking <b>Next</b> and <b>Previous</b> allows you to skip
-between steps.
+<b>Width</b> and <b>Height</b> boxes in the <b>Grid Size</b> section and see if your 
+script calculates the <b>rgbMapStepCount(width, height)</b> result correctly. 
+If everything is OK, you should already see your RGB script running through frames.
+To inspect individual frames, stop the script and hit the previous and next buttons.
 </p>
 
 <b>
 For troubleshooting purposes, I would suggest using some good JavaScript development
 tools for your browser. Mozilla FireFox has a built-in Web Console behind <i>Tools -> Web
 Developer</i> which is very useful in hunting errors within the JavaScript code.
+Google Chrome has one as well, that you can access with F12 or with <i>More Tools -> Developer Tools (Ctrl+Shift+I)</i>
 </b>
 </div>
 
@@ -158,7 +157,6 @@ Developer</i> which is very useful in hunting errors within the JavaScript code.
 </div>
 
 <hr/>
-This file is licensed under the Apache 2.0 license. Copyright &copy; Heikki Junnila, APIv2 integration: Hans-Jürgen Tappe.
-
+This file is licensed under the Apache 2.0 license. Copyright &copy; Heikki Junnila, Massimo Callegari, APIv2 integration: Hans-JÃ¼rgen Tappe.
 </body>
 </html>
