--- a/resources/rgbscripts/devtool.html
+++ b/resources/rgbscripts/devtool.html
@@ -38,7 +38,6 @@
     background-color: #8db8dd;
   }
 </style>
-<!-- Include your script on the following line, replace "opposite.js" -->
 <script type="text/javascript" src="devtool.js"></script>
 </head>
 <body onLoad="loadAlgoFile()">
@@ -127,11 +126,11 @@ Google Chrome has one as well, that you can access with F12 or with <i>More Tool
 <table>
  <tr>
   <td>Primary color (rrggbb)</td>
-  <td><input type="text" id="primaryColor" value="FF0000" pattern="[0-9A-Fa-f]{6}" size="6" onChange="writeCurrentStep()" required /></td>
+  <td><input type="text" id="primaryColor" value="FF0000" pattern="[0-9A-Fa-f]{6}" size="6" onChange="onColorChange()" required /></td>
  </tr>
  <tr id="secondaryColorChooser">
   <td>Secondary color (rrggbb, leave empty to disable)</td>
-  <td><INPUT TYPE="text" id="secondaryColor" value="" pattern="[0-9A-Fa-f]{6}" size="6" onChange="writeCurrentStep()"/></td>
+  <td><INPUT TYPE="text" id="secondaryColor" value="" pattern="[0-9A-Fa-f]{6}" size="6" onChange="onColorChange()"/></td>
  </tr>
 </table>
 </form>
