Save a little space by placing the buttons in a row.

--- a/resources/rgbscripts/devtool.html
+++ b/resources/rgbscripts/devtool.html
@@ -160,10 +160,14 @@ Google Chrome has one as well, that you can access with F12 or with <i>More Tool
  </tr>
  <tr>
   <td>
-   <input type="button" value="Previous" onClick="previousStep()"/>
-   <input type="button" value="Next" onClick="nextStep()"/><br/>
-   <input type="button" value="Start test" onClick="startTest()"/>
-   <input type="button" value="Stop test" onClick="stopTest()"/>
+   <span>
+    <input type="button" value="Previous" onClick="previousStep()"/>
+    <input type="button" value="Next" onClick="nextStep()"/>
+   </span>
+   <span>
+    <input type="button" value="Start test" onClick="startTest()"/>
+    <input type="button" value="Stop test" onClick="stopTest()"/>
+   </span>
   </td>
  </tr>
  <tr>
