Add reverse run mode to further tests.

--- a/resources/rgbscripts/devtool.html
+++ b/resources/rgbscripts/devtool.html
@@ -169,8 +169,9 @@ Google Chrome has one as well, that you can access with F12 or with <i>More Tool
     <input type="button" value="Next" onClick="devtool.nextStep()"/>
    </span>
    <span>
-    <input type="button" value="Start test" onClick="devtool.startTest()"/>
+    <input type="button" value="Start test" onClick="devtool.startTest(1)"/>
     <input type="button" value="Stop test" onClick="devtool.stopTest()"/>
+    <input type="button" value="Start reversed" onClick="devtool.startTest(-1)"/>
    </span>
   </td>
  </tr>
