fix: typo on websocket error handling

--- a/webaccess/res/keypad.html
+++ b/webaccess/res/keypad.html
@@ -92,22 +92,22 @@ function connect()
 {
   var url = 'ws://' + window.location.host + '/qlcplusWS';
   websocket = new WebSocket(url);
-  websocket.onopen = function(ev) {
+  websocket.onopen = function() {
     isConnected = true;
   };
-  websocket.onclose = function(ev) {
-    console.log(
-      "QLC+ connection is closed. Reconnect will be attempted in 1 second.",
-      e.reason
-    );
+
+  websocket.onclose = function () {
+    console.log("QLC+ connection is closed. Reconnect will be attempted in 1 second.");
     setTimeout(function () {
       connect();
     }, 1000);
   };
-  websocket.onerror = function(ev) {
-    console.error("QLC+ connection encountered error: ", err.message, "Closing socket");
+
+  websocket.onerror = function () {
+    console.error("QLC+ connection encountered error. Closing socket");
     ws.close();
   };
+
   websocket.onmessage = function(ev) {
     //alert(ev.data);
     var msg=ev.data;
