Add devtool "Alternate" mode for testing visualization of alternating patterns.

--- a/resources/rgbscripts/devtool.html
+++ b/resources/rgbscripts/devtool.html
@@ -177,6 +177,11 @@ Google Chrome has one as well, that you can access with F12 or with <i>More Tool
  </tr>
  <tr>
   <td>
+   Alternate: <input type="checkbox" id="alternate" onChange="devtool.onAlternateChanged()"/>
+  </td>
+ </tr>
+ <tr>
+  <td>
    Speed (ms): <input type="number" min="1" id="speed" value="500" size="4" style="width: 8em;" onChange="devtool.onSpeedChanged()"/>
   </td>
  </tr>
