Move the devtool.js out of the way to have a clear validity response by the script run test.

--- a/resources/rgbscripts/devtool.html
+++ b/resources/rgbscripts/devtool.html
@@ -38,7 +38,7 @@
     background-color: #8db8dd;
   }
 </style>
-<script type="text/javascript" src="devtool.js"></script>
+<script type="text/javascript" src="devtool/devtool.js"></script>
 </head>
 <body onLoad="devtool.loadAlgoFile()">
 
